refactor: improve domain event handling and service configuration
- Optimize AggregateRoot domain event collection with immutable copy
- Update YouTube service port configuration to use environment variables

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>